# vizier

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INFLUENCES.md  LICENSE  PRINCIPLES.md  README.md  RELEASING.md  ROADMAP.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
corpus/: README.md  manifest.json
corpus/chart-forms/: arc-diagram.md  bar-chart.md  box-and-jitter-strip.md  boxplot.md  bump-chart.md  calendar-heatmap.md  cartogram.md  chord-diagram.md  choropleth.md  connected-scatter.md  dendrogram.md  diverging-bar.md  dot-map.md  dot-plot.md  flow-map.md  gantt-chart.md  heatmap.md  hex-bin-map.md  histogram.md  icicle-plot.md  line-chart.md  lollipop-chart.md  marimekko.md  matrix-plot.md  mosaic.md  network-diagram.md  parallel-sets.md  pie-chart.md  proportional-symbol-map.md  radar-chart.md  ridgeline.md  sankey.md  scatterplot.md  slope-chart.md  small-multiples.md  stacked-area.md  stacked-bar.md  streamgraph.md  strip-plot.md  sunburst.md  (+3 more)
corpus/ft-vocab/: ft-visual-vocabulary.md
corpus/rubrics/: cairo-five-pillars.md  data-editor-lens.md  dataviz-method.md
corpus/weaver/: principle-action-oriented-conclusions.md  principle-ap-style-for-place-names-in-journalism-adjacent-work.md  principle-be-explicit-about-units.md  principle-break-apart-near-deterministic-columns.md  principle-calibrate-against-external-priors.md  principle-click-to-isolate-is-a-default-not-a-feature.md  principle-collapse-combinatorial-explosions.md  principle-contrast-and-colorblind-safety-not-just-looks-nice.md  principle-declare-the-audience-and-their-prior-knowledge.md  principle-denominators-and-cut-dates-travel-with-the-data.md  principle-distinguish-sensemaking-from-explanation.md  principle-document-the-external-pipeline-even-when-ingest-lives-elsewhere.md  principle-editorial-hooks-surface-the-counter-narrative-at-the-chart.md  principle-every-project-has-a-repeatable-ingest-script.md  principle-generate-variants-select-after.md  principle-iterate-on-the-viz-before-the-copy.md  principle-lede-first-methodology-last.md  principle-match-the-chart-form-to-the-licit-comparisons.md  principle-name-names-cite-research-inline.md  principle-name-the-counter-narrative-you-want-to-rule-out.md  principle-name-the-decision-the-reader-should-be-able-to-make.md  principle-name-units-at-the-data-layer.md  principle-order-stage-categories-meaningfully.md  principle-persistent-glossary-below-the-viz.md  principle-plain-language-labels-always.md  principle-pre-ship-checklist.md  principle-prefer-scrolling-over-clicking.md  principle-preserve-uncertainty-at-ingest-don-t-reconstruct-downstream.md  principle-put-percentages-next-to-labels.md  principle-reading-guide-directly-above-each-novel-diagram.md  principle-show-specific-places-not-averages.md  principle-state-the-headline-claim-before-building.md  principle-survey-data-needs-visible-error-bars-always.md  principle-the-data-file-is-a-frozen-contract.md  principle-tooltips-show-descriptions-not-just-counts.md  principle-treat-it-s-hard-to-read-as-a-signal-not-a-complaint.md  principle-unresolved-tensions-travel-forward-as-named-items.md  principle-what-the-data-can-and-can-t-say.md  project-info-market-voting.md  project-maplewood-profile.md  (+1 more)
docs/: chart-forms-plan.md  chart-forms-roadmap.md  computed-color-checks.md  index.html  mcp-setup.md  process-notes-sources.md  style.css
docs/reader/: INTERACTIVITY.md  artifact.toml  base.css  check-interactivity.mjs  data.json  glossary.js  index.html  main.js
evals/: PROTOCOL.md  README.md
evals/cases/: color-cvd-stacked-area.md
evals/experiments/: computed_color_ab.py
reader/: check-review.mjs  data.json  index.html  live-examples.js  main.js
scripts/: suggest_pattern_examples.py
src/vizier/: __init__.py  __main__gate.py  cli.py  gate.py  llm.py  manifest.py  mcp_server.py  schema.py  storage.py  vision.py
src/vizier/analyze/: __init__.py  color.py  extract.py  findings.py  forms.py  generate.py  guidance.py  structure.py
src/vizier/critique/: __init__.py  adhoc.py  embed.py  informed.py  judge.py  naive.py  retrieve.py  styles.py
src/vizier/db/: __init__.py  build.py  connect.py  query.py  schema.py
src/vizier/ingest/: __init__.py  _common.py  _fetch_html.py  _sitemap_blog.py  cairo_blog.py  eagereyes.py  kantar.py  (+12 more)
tests/: test_cli_surface.py  test_color.py  test_forms_structure.py  test_generate.py  test_guidance.py  test_storage.py
