[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vizier"
version = "0.1.0"
description = "Data-visualization expertise — computable form/color decisions plus corpus-backed critique"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Marc Lavallee" }]
keywords = ["dataviz", "data-visualization", "colorblind", "accessibility", "critique", "mcp"]

# Core — the turn-key computable toolkit + pattern query (BM25) + MCP server.
# No proprietary and no heavyweight deps; `vizier validate/suggest/recommend/
# analyze/ink` and the chart-pattern query all work from this alone.
dependencies = [
    "numpy>=1.26",
    "click>=8.1",
    "pydantic>=2.7",
    "python-frontmatter>=1.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
# Semantic retrieval — `find_similar`, `vizier db embed`. Pulls onnxruntime; the rest
# of vizier (BM25 search, recommend_form, the computable toolkit) works without it.
search = ["fastembed>=0.4"]
# LLM critique + evaluation. `somm` is vizier's LLM gateway (assumed published
# alongside vizier); swap in any client by adapting src/vizier/llm.py.
critique = ["somm", "somm-core", "fastembed>=0.4"]
# Rebuild the corpus from source. Fetching is pluggable (src/vizier/ingest/_common.py):
# the bundled default is httpx; install `fetch` for a richer strategy chain.
ingest = ["beautifulsoup4>=4.12", "lxml>=5.0"]
# Headless-browser fetch for sites that block plain HTTP (used by some ingesters).
browser = ["patchright"]

[project.urls]
Homepage = "https://github.com/lavallee/vizier"
Repository = "https://github.com/lavallee/vizier"

[project.scripts]
vizier = "vizier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vizier"]

[tool.ruff]
target-version = "py311"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]
