[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vizier"
version = "0.1.0"
description = "Generate and critique journalistic data visualizations — chart-form choice, encoding, and a corpus-backed critic"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Marc Lavallee" }]
keywords = ["dataviz", "data-visualization", "journalism", "charts", "colorblind", "accessibility", "critique", "mcp"]

# Core — the turn-key computable toolkit + pattern query (BM25) + MCP server.
# No proprietary and no heavyweight deps; `vizier validate/suggest/recommend/
# analyze/ink` and the chart-pattern query all work from this alone.
dependencies = [
    "numpy>=1.26",
    "click>=8.1",
    "pydantic>=2.7",
    "python-frontmatter>=1.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
# Semantic retrieval — `find_similar`, `vizier db embed`. Pulls onnxruntime; the rest
# of vizier (BM25 search, recommend_form, the computable toolkit) works without it.
search = ["fastembed>=0.4"]
# LLM critique + evaluation. `somm` is vizier's LLM gateway (on PyPI); swap in
# any client by adapting src/vizier/llm.py.
critique = ["somm>=0.7", "somm-core>=0.7", "fastembed>=0.4"]
# Rebuild the corpus from source. Fetching is pluggable (src/vizier/ingest/_common.py):
# the bundled default is httpx; point $VIZIER_FETCHER at a richer fetcher if you have one.
ingest = ["beautifulsoup4>=4.12", "lxml>=5.0"]
# Headless-browser fetch for sites that block plain HTTP (used by some ingesters).
browser = ["patchright"]

[project.urls]
Homepage = "https://github.com/lavallee/vizier"
Repository = "https://github.com/lavallee/vizier"

[project.scripts]
vizier = "vizier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vizier"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# E741: `l` is the OKLab/OKLCH lightness channel in analyze/color.py — the
# domain-correct name for that math. Renaming it would make the port less
# faithful to the reference, so allow the single-letter name project-wide.
ignore = ["E741"]

[tool.pytest.ini_options]
# src layout: put the package on the path so tests import `vizier` whether or
# not it's installed. testpaths keeps collection to the suite.
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]
